Changed Readme, removed some filed, added others and formatted the code (a bit)

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Movie Quiz",
+  "name": "IMDB Top 100 Movie Quiz",
   "icons": [
     {
       "src": "favicon.ico",
