--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
-  }
+  },
+  "homepage": "https://github.com/hassan-qazi/imdb-movie-quiz"
+
 }
