--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "homepage": "https://github.com/hassan-qazi/imdb-movie-quiz"
+  "homepage": "https://hassan-qazi.github.io/imdb-movie-quiz"
 
 }
